--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,9 +9,7 @@ jobs:
     name: Checks
     timeout-minutes: 15
     runs-on: [macos-latest]
-    if: |
-      (github.event.pull_request.commits == 1 && !contains(github.event.pull_request.title, '[skip ci]')) ||
-      contains(github.event.pull_request.title, '[run ci]')
+    if: (!contains(github.event.pull_request.title, '[skip ci]'))
     steps:
       - uses: actions/checkout@v2
         with:
@@ -23,10 +21,6 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - name: Gitleaks
-        run: |
-          brew install gitleaks
-          gitleaks --redact --verbose --pretty --repo-path=.
       - name: Bundler
         run: |
           gem install bundler
